# coreason-workspace-env

./: .coverage  .env  .gitignore  .gitleaksignore  .mcp.json  404.html  AGENTS.md  Dockerfile  Dockerfile.project.template  Dockerfile.test  LICENSE.txt  NOTICE  README.md  TESTING.md  alerts.json  annotations.json  annotations_87385958892.json  annotations_87387901881.json  annotations_87388594753.json  docker-compose.dependencies.yaml  docker-compose.standalone.yaml  docker-compose.yaml  docker-compose.yml  fix_imports.py  fix_imports2.py  index.html  mkdocs.yml  project_schema.json  pyproject.toml  requirements.txt  tree.txt  workspace-configmap.yaml
.github/workflows/: advanced-security.yml  bandit.yml  container-scan.yml  deploy-helm.yml  docker-build.yml  fork-monitor.yml  gitleaks.yml  mkdocs.yml  nightly-fuzzing.yml  osv-scanner.yml  pypi-publish.yml  scorecard.yml  security.yml  trivy.yml  zap-dast.yml
alembic/: env.py
alembic/versions/: a30c7419a415_epistemic_quarantine_snapshots.py  b0509aef577c_init_knowledge_graph.py
architecture/anti_stub_enforcement/: index.html
architecture/brain_body_dichotomy/: index.html
architecture/context_engineering/: index.html
architecture/deepagent_pattern/: index.html
architecture/enterprise_runtime/: index.html
architecture/epistemic_firewall/: index.html
architecture/landscape_comparison/: index.html
architecture/maker_checker/: index.html
architecture/multi_surface_parity/: index.html
clinical_concept_normalization_legacy/: BIOMCP.json  BIOMCP.py  NEN.json  NEN.py  NER.json  NER.py  NLP.json  NLP.py  UMLS.json  UMLS.py  clinical-definition-synthesizer.json
clinical_concept_normalization_legacy/clinical-definition-synthesizer/: AGENTS.md  identity.md  skill.md  soul.md
clinical_concept_normalization_legacy/deep_orchestrator/: __init__.py  app.py  state.py
clinical_nlp_migration_project/: index.html
core_architecture/: index.html
coreason_workspace_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
deploy/cloudformation/: coreason-enterprise.yaml
deployment_guide/: index.html
design/: 20260716_design
developer_guide/: index.html
docker/: otel-collector-config.yaml
docker/nginx/: nginx.conf
docs/: clinical_nlp_migration_project.md  core_architecture.md  deployment_guide.md  developer_guide.md  dify_deployment.md  general_purpose_agent_parity.md  getting_started.md  how_to_guides.md  index.md  interaction_surfaces.md  purpose.md  real_world_use_cases.md  services.md  system_capabilities_mece.md  testing_and_verification.md  tutorials.md  user_guide.md  vignette_mangalore_news.md  zero_waste_architecture.md
docs/architecture/: anti_stub_enforcement.md  brain_body_dichotomy.md  context_engineering.md  deepagent_pattern.md  enterprise_runtime.md  epistemic_firewall.md  landscape_comparison.md  maker_checker.md  multi_surface_parity.md
docs/guides/: building_skills.md  deploying.md  portability.md  testing.md  user_guide.md  writing_validation_rules.md
docs/surfaces/: cli.md  mcp_server.md  python_sdk.md  rest_api.md  websocket_sse.md
docs/tutorial/: cli_multi_agent_tutorial.md
generated_agents/test_session_e2e/: pyproject.toml
getting_started/: index.html
interaction_surfaces/: index.html
mcp_export/: metadata.json
my_new_agent/: orchestrator_agent.yaml  pyproject.toml
notebooks/: 01_factory_basics.ipynb
policies/: agent_rbac.rego
scripts/: env_utils.py  mcp_bundler.py  start_observability.ps1
search/: search_index.json
services/: index.html
src/: main.py
tests/: conftest.py  deterministic_harness.py  run_integration.py  test_agent_harness.py  test_agents_e2e.py  test_api_endpoints.py  test_ast_auditor.py  test_ast_modifier.py  test_audit_testing_improvement_services.py  test_catalog_service.py  test_catalog_tools.py  test_causal_agent.py  test_causal_mcp.py  test_causal_thought_services.py  test_celery_tasks.py  test_cli.py  test_core.py  test_data.csv  test_deepagents_compatibility.py  test_e2e_factory.py  test_e2e_surfaces.py  test_envelope_fsm.py  test_epic_01_e2b.py  test_epistemic_graph.py  test_evaluator.py  test_factory_agents.py  test_framework.py  test_full_system_e2e.py  test_integration.py  test_knowledge_management.py  test_legacy_modernization.py  test_main.py  test_maker_checker_flow.py  test_marketplace.py  test_mcp.py  test_observability.py  test_omnigent_compatibility.py  test_opa_middleware.py  test_parity.py  test_portability.py  (+15 more)
user_guide/: index.html
vignette_mangalore_news/: index.html
(+260 files in other folders)
