[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coreason-workspace-env"
dynamic = ["version"]
description = "Scalable, Async, Multi-Tenant LangGraph Platform"
authors = [
  { name="Gowtham A Rao, MD, PhD", email="gowtham.rao@coreason.ai" }
]
readme = "README.md"
license = { text = "Prosperity 3.0" }
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "asyncpg>=0.31.0",
    "redis>=5.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2.20",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.12",
    "coreason-manifest>=0.98.0",
    "dowhy>=0.11",
    "networkx>=3.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "websockets>=15.0.1",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
coreason = "src.cli.main:cli_entry"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
docs = [
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=11.0.1",
]
