[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coreason-workspace-env"
dynamic = ["version"]
description = "Scalable, Async, Multi-Tenant LangGraph Platform"
authors = [
  { name="Gowtham A Rao, MD, PhD", email="gowtham.rao@coreason.ai" }
]
readme = "README.md"
license = { text = "Prosperity 3.0" }
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2.20",
    "deepagents>=0.6.12",
    "litellm>=1.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.12",
    "dowhy>=0.11",
    "networkx>=3.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "websockets>=15.0.1",
    "prompt-toolkit>=3.0.52",
    "jsonpatch>=1.33",
    "fastmcp>=1.0.0",
    "typer>=0.9.0",
    "oras>=0.2.0",
    "rocrate>=0.9.0",
    "cryptography>=44.0.0",
    "python-dotenv>=1.0.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "httpx>=0.28.1",
    "psycopg-binary>=3.3.4",
    "e2b-code-interpreter>=1.0.0",
    "libcst>=1.8.6",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "structlog>=24.1.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "langchain-openai>=1.3.5",
]

[project.scripts]
coreason = "src.cli.main:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "deepagents-evals",
    "langsmith>=0.9.3,<0.10.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "testcontainers>=4.14.2",
]
docs = [
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=11.0.1",
]

[tool.pytest.ini_options]
addopts = "-p no:langsmith"


